public/stylesheets/style.css
/* ... */
/* Style the front side (fallback if image is missing) */
.flip-card-front {
  background-color: #f5f5f5;
  color: black;
}

/* Style the back side */
.flip-card-back {
  background-color: #191505;
  color: white;
  transform: rotateY(180deg);
  display: flex;
  align-items: center;
}

.random-card {
  width: 280px;
  border: none;
  margin: 0 auto;
  background-color: transparent;
}

.random-card li {
  background-color: transparent;
  border: 1px solid white;
  color: white;
}

#random-movie-view {
  width: 45%;
  min-width: fit-content;
  height: 80%;
  min-height: fit-content;
  margin: 0 auto;
  border: 1px solid rgb(228, 227, 227);
  border-radius: 8px;
  box-shadow: 2px 2px 10px rgba(238, 238, 238, 0.2);
  background-color: white;
  margin-top: 30px;
  margin-bottom: 30px;
}

#random-movie-container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

#random-movie-title {
  margin: 20px;
  background-color: #eacc38;
  width: max-content;
}

/* Events */

#host-event-btn {
  background-color: #eacc38;
  border: none;
  border-radius: 16px;
  width: 190px;
  height: 50px;
  font-size: 1.2rem;
  transition: ease-in-out;
  display: block;
  margin: 0 auto;
  margin-top: 30px;
  margin-bottom: 30px;
}

#host-event-btn:hover {
  border: white solid 3px;
}

#events-container {
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.event-cards {
  margin-top: 20px;
  border: 1px solid rgb(228, 227, 227);
  border-radius: 8px;
  box-shadow: 2px 2px 10px rgba(238, 238, 238, 0.2);
  background-color: white;
  margin-top: 30px;
  margin-bottom: 30px;
}

.event-link {
  color: #6c757d;
}

.event-link:hover {
  color: #4d545a;
}

.event-atendees {
  color: #6c757d;
}

/* Movie details */

#movie-details-left-wing {
  width: 45%;
  min-width: min-content;
  margin: 0 auto;
  border: 1px solid rgb(228, 227, 227);
  border-radius: 8px;
  box-shadow: 2px 2px 10px rgba(238, 238, 238, 0.2);
  background-color: white;
  margin-top: 30px;
}

#movie-details-left-wing-container {
  display: flex;
}

#movie-details-right-wing {
  min-width: fit-content;
  margin: 0 auto;
  border: 1px solid rgb(228, 227, 227);
  border-radius: 8px;
  box-shadow: 2px 2px 10px rgba(238, 238, 238, 0.2);
  background-color: white;
  margin-top: 30px;
  margin-bottom: 30px;
}

.movie-titles {
  margin: 20px;
  background-color: #eacc38;
  width: max-content;
}

#movie-detail-view {
  display: flex;
  margin-bottom: 30px;
  margin-right: 70px;
  margin-left: 70px;
}

#movie-detail-img {
  margin-left: 20px;
  margin-right: 15px;
}

#movie-detail-img img {
  width: 250px;
}

#movie-detail-details {
  margin: 10px 20px 0px 15px;
}

#movie-details-users {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

#movie-details-users img {
  margin-right: 7px;
}

.follow-btn {
  background-color: #eacc38;
  border: #eacc38;
  color: black;
  outline-color: none;
}

.follow-btn:hover {
  background-color: #ddc135;
  border: #ddc135;
  color: black;
}

.follow-btn:active {
  background-color: #ddc135;
  border: #ddc135;
  color: black;
}

.follow-btn:focus {
  background-color: #ddc135;
  border: #ddc135;
  color: black;
}

.follow-btn:disabled {
  background-color: #72631a;
  border: #72631a;
  color: white;
}

#movie-chat {
  width: 20%;
  min-width: min-content;
  min-height: min-content;
  margin: 0 auto;
  border: 1px solid rgb(228, 227, 227);
  border-radius: 8px;
  box-shadow: 2px 2px 10px rgba(238, 238, 238, 0.2);
  background-color: white;
  margin-top: 30px;
}

.movie-chat-messages {
  height: 55%;
  padding-left: 10px;
  max-width: 100%;
  border: 1px solid rgb(228, 227, 227);
  border-radius: 8px;
  box-shadow: 2px 2px 10px rgba(238, 238, 238, 0.2);
  background-color: #f5f5f5;
  margin: 20px;
  max-height: 246.39px;
  overflow-y: scroll;
}

.send-message-btn {
  margin-left: 20px;
}

.chat-text-input {
  margin-left: 20px;
  width: 88%;
}

/*Homepage(index)*/

.nav-1 {
  background-color: #191505;
  align-items: center;
  padding: 10px;
  display: flex;
  justify-content: space-between;
}

.homepage {
  flex: 1;
  background-color: #eacc38;
  color: black;
  width: 100%;
}

.body-div {
  display: flex;
  justify-content: center;
  height: 80%;
}

footer {
  display: flex;
  align-items: flex-end;
  background-color: #191505;
  padding-top: 7px;
  width: 100%;
  justify-content: flex-end;
  flex-flow: row wrap;
}

/*TMDB LOGO*/
.movie-database {
  height: 60px;
  width: 60px;
  margin-bottom: 10px;
  margin-right: 10px;
}

.home-div {
  display: flex;
  flex-direction: column;
  width: 50%;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
}

.intro-div {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  height: 80%;
}

/*Homepage(index)*/

/*Movie list*/
.nav-2 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 10px;
  background-color: #191505;
  padding: 10px;
  margin-bottom: 0;
}

.nav-links {
  display: flex;
  justify-content: space-around;
  align-items: center;
  max-width: 40%;
  min-width: 40%;
  text-decoration: none;
  color: black;
}

.nav-links,
a {
  color: #eacc38;
  text-decoration: none;
  font-size: 20px;
}

.nav-links,
a:hover {
  color: white;
}

.nav-user-info {
  display: flex;
  flex-direction: row;
  align-items: center;
  color: white;
}

.nav-user-info h4 {
  margin-right: 10px;
}

.movie-page-title {
  margin: 20px;
  background-color: #eacc38;
  width: max-content;
}

.movie-list-body {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin-top: 30px;
}

.movie-list-content {
  width: 80%;
  background-color: white;
  margin-bottom: 10px;
  border: 1px solid rgb(228, 227, 227);
  border-radius: 8px;
  box-shadow: 2px 2px 10px rgba(238, 238, 238, 0.2);
}
/* ... */

